# codex-graph

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  caches.yml  docker.yml  publish.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
backend/: AGENTS.md  CLAUDE.md  Dockerfile.database  README.md  init-extensions.sql  pyproject.toml
backend/.github/: dependabot.yml
backend/.github/workflows/: build.yml  caches.yml
backend/src/codex_graph/: db.py  main.py  models.py
backend/src/codex_graph/queries/: c_detailed.scm  c_high_level.scm  csharp_detailed.scm  css_detailed.scm  css_high_level.scm  go_detailed.scm  go_high_level.scm  html_detailed.scm  java_detailed.scm  javascript_detailed.scm  json_detailed.scm  json_high_level.scm  markdown_high_level.scm  ruby_high_level.scm  rust_high_level.scm  toml_detailed.scm  toml_high_level.scm  tsx_detailed.scm  tsx_high_level.scm  typescript_detailed.scm  typescript_high_level.scm  yaml_detailed.scm
backend/tests/: conftest.py
backend/tests/unit/: ast_extraction_test.py  db_git_test.py  db_in_memory_test.py  language_support_test.py  queries_go_test.py  queries_languages_test.py  query_cli_test.py
docker/: Dockerfile  Dockerfile.database
server/: Dockerfile.database  pyproject.toml  queries.sql
server/src/codex_graph/: main.py
server/src/codex_graph_server/: main.py
server/src/codex_graph_server/queries/: python_high_level.scm
src/codex_graph/: main.py  models.py
src/codex_graph/api/: app.py  data_layer.py  dependencies.py  lifespan.py  middleware.py  models.py  pagination.py  schemas.py  views.py
src/codex_graph/api/routes/: cypher.py  health.py  ingest.py  query.py  root.py  statistics.py
src/codex_graph/cli/: app.py  db.py  ingest.py  query.py  serve.py
src/codex_graph/core/: ast.py  ingest.py  languages.py  query.py
src/codex_graph/core/ports/: database.py  watcher.py
src/codex_graph/dashboard/: app.py  callbacks.py  graph_data.py  layout.py  styles.py
src/codex_graph/db/: __init__.py  cypher.py  engine.py  git.py  helpers.py  memory.py  migrations.py  postgres.py
src/codex_graph/mcp/: server.py
src/codex_graph/queries/: cpp_detailed.scm  cpp_high_level.scm  csharp_high_level.scm  go_detailed.scm  go_high_level.scm  html_high_level.scm  java_high_level.scm  javascript_high_level.scm  markdown_detailed.scm  python_detailed.scm  ruby_detailed.scm  rust_detailed.scm  yaml_high_level.scm
src/codex_graph/watcher/: watchfiles_adapter.py
tests/: conftest.py
tests/integration/: conftest.py  ingest_test.py  migrations_test.py  pagination_test.py  query_test.py
tests/unit/: api_routes_test.py  ast_extraction_test.py  cli_db_test.py  cli_help_test.py  collect_ast_data_test.py  core_query_test.py  dashboard_test.py  db_git_test.py  db_in_memory_test.py  ingest_core_test.py  language_support_test.py  mcp_server_test.py  models_test.py  queries_python_test.py  query_cli_test.py  watcher_test.py
