[project]
name = "codex-graph"
version = "0.1.0"
description = "The backend and CLI of Codex Graph."
authors = [
    {name = "Felix Müller",email = "felix@fmueller.io"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-ollama (>=0.3.8,<0.4.0)",
    "tree-sitter (>=0.25.1,<0.26.0)",
    "tree-sitter-language-pack (>=0.9.0,<0.10.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.5,<2.0.0)",
]

[project.scripts]
codex-graph-server = "codex_graph.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "codex_graph", from = "src" }]

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
ruff = "^0.13.3"
pre-commit = "^4.3.0"
pytest = "^9.0.1"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = "src/**/*.py,tests/**/*.py"
strict = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = true
