[project]
name = "codex-graph"
version = "0.1.0"
description = "The backend and CLI of Codex Graph."
authors = [
    {name = "Felix Müller",email = "felix@fmueller.io"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "langchain>=1.2.6,<2",
    "langchain-ollama>=1.0.1,<2",
    "tree-sitter>=0.25.2,<1",
    "tree-sitter-language-pack>=0.13.0,<1",
    "sqlalchemy[asyncio]>=2.0.45,<3",
    "asyncpg>=0.31.0,<1",
    "alembic>=1.18.1,<2",
]

[project.scripts]
codex-graph-server = "codex_graph.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "codex_graph", from = "src" }]

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
ruff = "^0.15.0"
pre-commit = "^4.5.1"
pytest = "^9.0.2"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
files = "src/**/*.py,tests/**/*.py"
strict = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = true
